--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,17 +1,9 @@
-#skills__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .skills__card {
   margin-left: 4rem;
   margin-right: 4rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
-
 
 @media only screen and (max-width: 980px) {
   .skills__cardgroup {
